--- a/style-menu.css
+++ b/style-menu.css
@@ -27,7 +27,7 @@
   padding: 10px;
   /* padding:0.05em; */
   /* float: right; */
-  background-color: blue;
+  /* background-color: blue; */
 }
 .a--register{
   /* display: block; */
