--- a/style-sendmessage.css
+++ b/style-sendmessage.css
@@ -1,12 +1,14 @@
 body{
   background-color: red;
+  margin:0;
 }
 
 section{
+  margin:0px;
   padding: 25px;
-border-radius: 0 0 25px 25px;
+  border-radius: 0 0 25px 25px;
 /* background-color: green; */
-background-color: #66ffff;
+  background-color: #66ffff;
 }
 .section--message-input{
   width:75%;
